--- a/wp-content/themes/florian-custom/style.css
+++ b/wp-content/themes/florian-custom/style.css
@@ -940,4 +940,22 @@ body {
   place-items: center;
 }
 
+.card-article {
+  margin-bottom: 60px;
+}
+
+.card-article-img img {
+  height: 300px;
+  object-fit: cover;
+}
+
+.card-article-content {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.card-article.first .card-article-img img {
+  height: 500px;
+}
+
 /*# sourceMappingURL=style.css.map */
